Closed Bug 1616455 Opened 5 years ago Closed 5 years ago

readPixels should accept Uint8Clamped without error

Categories

(Core :: Graphics: CanvasWebGL, defect, P1)

defect

Tracking

()

RESOLVED FIXED
mozilla75
Tracking Status
firefox75 --- fixed

People

(Reporter: jgilbert, Assigned: jgilbert)

References

()

Details

Attachments

(1 file)

No description provided.
Pushed by jgilbert@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/c6c31fff89b3 readPixels should treat uint8clamped as uint8. r=lsalzman
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla75
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: