Bug 1616455 - readPixels should treat uint8clamped as uint8. r=lsalzman

Differential Revision: https://phabricator.services.mozilla.com/D63284